[BACKEND-11] feat(app): add users routes group and required dependencies
